src/objects/MDM_Manufacturer__c.object
<CustomObject>
    <description>Manufacturer</description>
    <fields>
        <fullName>EnterpriseID__c</fullName>
        <description>EnterpriseID</description>
        <externalId>true</externalId>
        <inlineHelpText>EnterpriseID</inlineHelpText>
        <label>EnterpriseID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ManufacturerID__c</fullName>
        <description>This ID will be EnterpriseID.Whereas Data steward has control over the org refresh.</description>
        <displayFormat>MG-{000000000}</displayFormat>
        <label>ManufacturerID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>TPM_DefaultBusinessUnit__c</fullName>
        <description>TPM_DefaultBusinessUnit</description>
        <inlineHelpText>TPM_DefaultBusinessUnit</inlineHelpText>
        <label>Default CPG Toolbox Business Unit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Manufacturer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EnterpriseID__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Manufacturer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Manufacturers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>MDM_Manufacturer_Name_Is_Required</fullName>
        <active>true</active>
        <description>Manufacturer Name is required and Unique.</description>
        <errorConditionFormula>IF(ISNEW(), IF( UPPER(Name) == UPPER(VLOOKUP($ObjectType.MDM_Manufacturer__c.Fields.Name,$ObjectType.MDM_Manufacturer__c.Fields.Name, Name)),true , false),AND(ISCHANGED(Name), IF( UPPER(Name) == UPPER(VLOOKUP($ObjectType.MDM_Manufacturer__c.Fields.Name,$ObjectType.MDM_Manufacturer__c.Fields.Name, Name)),true,false)))</errorConditionFormula>
        <errorMessage>Manufacturer name is not Unique.</errorMessage>
    </validationRules>
</CustomObject>